<resources>
    <string name="app_name">Snap Note</string>
    <string name="topBarTitle">All notes</string>
    <string name="etSearch">Search notes</string>
    <string name="itemNotes">Notes</string>
    <string name="itemTodos">To-dos</string>
    <string name="itemGridView">Grid View</string>
    <string name="itemListView">List View</string>
    <string name="itemDeleteItems">Delete Items</string>
    <string name="itemSearch">Search</string>
    <string name="fabTodo">TODO</string>
    <string name="header_title">Notes</string>
    <string name="itemAllNotes">All notes</string>
    <string name="itemAllTodos">All to-dos</string>
    <string name="itemMyFavourites">My Favourites</string>
    <string name="itemSubTitle">Generals</string>
    <string name="itemSHareThisApp">Share this App</string>
    <string name="itemSupportUs">Support Us</string>
    <string name="itemAbout">About</string>
    <string name="itemExit">Exit</string>
    <string name="itemCategories">Categories</string>
    <string name="topBarAllToDos">All to-dos</string>
    <string name="SupportUsAlertDialogTitle">Feed Back!</string>
    <string name="SupportUsAlertDialogMessage">Do You Like Our App?</string>
    <string name="SupportUsAlertDialogPositiveButtonText">Yes!</string>
    <string name="SupportUsAlertDialogNegativeButtonText">No!</string>
    <string name="AboutUsAlertDialogTitle">About Us!</string>
    <string name="AboutUsAlertDialogMessage">"Introducing our versatile Note Pad App. Stay organized and efficient with our user-friendly interface that seamlessly combines note-taking. Jot down your ideas, important reminders, and daily thoughts effortlessly.Our app is designed to enhance your productivity and simplify your life. Don't forget to Share our app."</string>
    <string name="editNoteTopBarTitle">Edit note</string>
    <string name="itemSave">Save</string>
    <string name="itemFormat">Format</string>
    <string name="itemGallery">Gallery</string>
    <string name="tvCamera">Camera</string>
    <string name="tvShowTime">Today, </string>
    <string name="tvPM">" "PM</string>
    <string name="tvAM">" "AM</string>
    <string name="itemDelete">Delete</string>
    <string name="thankYou">Thank You For Your FeedBack</string>
    <string name="shareNow">ShareNow!</string>
</resources>